syntax = "proto3";

package social_network;

service SocialNetworkService {
  rpc Follow (FollowRequest) returns (FollowResponse);
  rpc Unfollow (UnfollowRequest) returns (UnfollowResponse);
  rpc IsFollowing (IsFollowingRequest) returns (IsFollowingResponse);
  rpc GetFollowers (GetFollowersRequest) returns (GetFollowersResponse);
  rpc GetFollowees (GetFolloweesRequest) returns (GetFolloweesResponse);
  rpc GetFollowerCount (GetFollowerCountRequest) returns (GetFollowerCountResponse);
  rpc GetFolloweeCount (GetFolloweeCountRequest) returns (GetFolloweeCountResponse);
  rpc Commit (CommitRequest) returns (CommitResponse);
  rpc GetCurrentVersion (GetCurrentVersionRequest) returns (GetCurrentVersionResponse);
}

message FollowRequest {
  uint64 follower_id = 1;
  uint64 followee_id = 2;
}

message FollowResponse {
  bool success = 1;
  string error_message = 2;
  bool was_new_follow = 3;
}

message UnfollowRequest {
  uint64 follower_id = 1;
  uint64 followee_id = 2;
}

message UnfollowResponse {
  bool success = 1;
  string error_message = 2;
  bool was_unfollowed = 3;
}

message IsFollowingRequest {
  uint64 follower_id = 1;
  uint64 followee_id = 2;
  optional uint64 version = 3;
}

message IsFollowingResponse {
  bool is_following = 1;
}

message GetFollowersRequest {
  uint64 user_id = 1;
}

message GetFollowersResponse {
  repeated uint64 follower_ids = 1;
}

message GetFolloweesRequest {
  uint64 user_id = 1;
}

message GetFolloweesResponse {
  repeated uint64 followee_ids = 1;
}

message GetFollowerCountRequest {
  uint64 user_id = 1;
}

message GetFollowerCountResponse {
  uint32 count = 1;
}

message GetFolloweeCountRequest {
  uint64 user_id = 1;
}

message GetFolloweeCountResponse {
  uint32 count = 1;
}

message CommitRequest {}

message CommitResponse {
  uint64 version = 1;
}

message GetCurrentVersionRequest {}

message GetCurrentVersionResponse {
  uint64 version = 1;
} 